# src/main/java/com/krustykrabrecipes/model/mapper/IngredientMapper.java
@@ -1,8 +1,10 @@
 package com.krustykrabrecipes.model.mapper;
 
+import com.krustykrabrecipes.api.model.IngredientUpdateRequest;
 import com.krustykrabrecipes.model.Ingredient;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
+import org.mapstruct.MappingTarget;
 import org.mapstruct.Mappings;
 
 import java.util.List;
@@ -17,4 +19,10 @@ public interface IngredientMapper {
     Ingredient toIngredient(com.krustykrabrecipes.api.model.Ingredient ingredient);
 
     List<Ingredient> toIngredients(List<com.krustykrabrecipes.api.model.Ingredient> ingredients);
+
+    @Mappings({
+            @Mapping(target = "recipe", ignore = true),
+            @Mapping(target = "recipeId", ignore = true)
+    })
+    void update(@MappingTarget Ingredient ingredient, IngredientUpdateRequest ingredientUpdateRequest);
 }
