# src/main/java/com/krustykrabrecipes/model/mapper/RecipeMapper.java
@@ -2,9 +2,11 @@ package com.krustykrabrecipes.model.mapper;
 
 import com.krustykrabrecipes.api.model.CreateRecipeRequest;
 import com.krustykrabrecipes.api.model.RecipeResponse;
+import com.krustykrabrecipes.api.model.UpdateRecipeRequest;
 import com.krustykrabrecipes.model.Recipe;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
+import org.mapstruct.MappingTarget;
 import org.mapstruct.Mappings;
 
 import java.util.List;
@@ -21,4 +23,12 @@ public interface RecipeMapper {
             @Mapping(target = "ingredients", ignore = true)
     })
     Recipe toRecipe(CreateRecipeRequest createRecipeRequest);
+
+
+    @Mappings({
+            @Mapping(target = "id", ignore = true),
+            @Mapping(target = "removed", ignore = true),
+            @Mapping(target = "ingredients", ignore = true)
+    })
+    void updateRecipe(@MappingTarget Recipe recipe, UpdateRecipeRequest updateRecipeRequest);
 }
